// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and informations 1`] = `
Object {
  "data": Object {
    "apiID": "test-collection-type",
    "schema": Object {
      "attributes": Object {
        "title": Object {
          "type": "string",
        },
      },
      "collectionName": "test_collection_types",
      "connection": "default",
      "description": "",
      "draftAndPublish": false,
      "kind": "collectionType",
      "name": "Test Collection Type",
    },
    "uid": "application::test-collection-type.test-collection-type",
  },
}
`;

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and informations with draftAndPublish 1`] = `
Object {
  "data": Object {
    "apiID": "ct-with-dp",
    "schema": Object {
      "attributes": Object {
        "title": Object {
          "type": "string",
        },
      },
      "collectionName": "ct_with_dps",
      "connection": "default",
      "description": "",
      "draftAndPublish": true,
      "kind": "collectionType",
      "name": "CT with DP",
    },
    "uid": "application::ct-with-dp.ct-with-dp",
  },
}
`;

exports[`Content Type Builder - Content types Single Types Get single type returns full schema and informations 1`] = `
Object {
  "data": Object {
    "apiID": "test-single-type",
    "schema": Object {
      "attributes": Object {
        "title": Object {
          "type": "string",
        },
      },
      "collectionName": "test_single_types",
      "connection": "default",
      "description": "",
      "draftAndPublish": false,
      "kind": "singleType",
      "name": "Test Single Type",
    },
    "uid": "application::test-single-type.test-single-type",
  },
}
`;
